Limit the Scout version selection for creating new projects
The supported versions have the following new constraints:
1. Version must be >= 23.0
2. Version must be LTS or the newest stable release